--- a/core/webchat.html
+++ b/core/webchat.html
@@ -9,16 +9,16 @@
     <script src="https://cdn.botframework.com/botframework-webchat/latest/botchat.js"></script>
     <script src="webchat.js"></script>
 	<script>
-        var webchatParams = {
+        var params = {
             userId: 'userid',
             username: 'you',
             botId: '<YOUR_BOT_ID>',
             botName: '<YOUR_BOT_NAME>',
             targetElement: 'botChat', // html element where the webchat gets rendered
             secret: '<YOUR_WEBCHAT_SECRET>',
-            customArg: '<YOUR_CUSTOM_ARG>'
+            myCustomArg: '<YOUR_CUSTOM_ARG>'
         };
         
-        new MyWebChat(webchatParams).loadApplication();
+        new WebChat(params).loadApplication();
     </script>
 </html>
